*
* 1.1.8
*

- New node properties: "disable topology polling" and
  "disable discovery polling"
- Changes and improvements in Java console:
	- Implemented embedded web page element type in dashboards
	- Implemented alarm viewer element type in dashboards
	- Syslog monitor
	- Event monitor
- New MIBs added: CISCO-STACK-MIB, FDDI-SMT73-MIB


*
* 1.1.7
*

- New internal parameter: Net.IP.NextHop
- Implemented IP route visualization in management console
- New MIBs added: JUNIPER-IVE-MIB
- New NXSL functions: GetInterfaceObject
- Many small improvements in management console
- Fixed issues: #335, #336, #337


*
* 1.1.6
*

- Added possibility to run different subagents under different
  user accounts
- Improved work with 802.1x capable switches
- New MIBs added: EF-6000-MIB, ES-1000-MIB, IBM-6611-APPN-MIB, IBM-MIB,
  IBMCPU-MIB
- Fixed interoperability problems with IBM AS/400 SNMP agent
- AIX support improved
- Fixed serious memory leaks in server
- Many small improvements in management console


*
* 1.1.5
*

- Added "foreach" operator in NXSL
- New NXSL functions: GetDCIValueByName, GetDCIValueByDescription
- New attribute "comments" in NXSL classes "Node" and "NetObj"
- Dashboard configuration in console improved
- Database upgrade bug fixed
- Solaris support improved
- Many small improvements in management console


*
* 1.1.4
*

- Implemented named parameters for events
- Added integration script for HP EVA disk arrays
- Added driver for Netscreen firewalls
- Usage of DNS names instead of IP address for defining primary
  communication address is now supported (for better support of nodes with
  dynamic IPs)
- New MIBs added: ATM-TC-MIB, CISCO-BRIDGE-EXT-MIB, CISCO-IF-EXTENSION-MIB,
  CISCO-L2L3-INTERFACE-CONFIG-MIB, CISCO-PRIVATE-VLAN-MIB,
  CISCO-VLAN-IFTABLE-RELATIONSHIP-MIB, DVMRP-MIB, IGMP-MIB, IPV6-TC,
  RAPID-CITY-BAY-STACK, RC-MLT-MIB
- Mobile client for Android introduced
- Many small improvements in management console