@@ -2026,6 +2026,7 @@ AC_CONFIG_FILES([
 	src/server/drivers/Makefile
 	src/server/drivers/baystack/Makefile
 	src/server/drivers/cat2900xl/Makefile
+	src/server/drivers/catalyst/Makefile
 	src/server/drivers/ers8000/Makefile
 	src/server/drivers/lib/Makefile
 	src/server/drivers/lib/avaya-ers/Makefile
