@@ -515,6 +515,14 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "nxinstall", "src\nxinstall\
 		{AEB182ED-7F5C-4F5A-BCE1-9A38E98579BA} = {AEB182ED-7F5C-4F5A-BCE1-9A38E98579BA}
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "catalyst", "src\server\drivers\catalyst\catalyst.vcproj", "{F343CDCB-1DB5-4563-86DF-6AF1596090B2}"
+	ProjectSection(ProjectDependencies) = postProject
+		{CB89D905-C8BE-4027-B2D8-F96C245E9160} = {CB89D905-C8BE-4027-B2D8-F96C245E9160}
+		{7DC90EE4-E31C-4F12-8F1E-81F10E9099FC} = {7DC90EE4-E31C-4F12-8F1E-81F10E9099FC}
+		{AEB182ED-7F5C-4F5A-BCE1-9A38E98579BA} = {AEB182ED-7F5C-4F5A-BCE1-9A38E98579BA}
+		{375F95BD-EFBA-4AA3-8DA3-E79779A12896} = {375F95BD-EFBA-4AA3-8DA3-E79779A12896}
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Pocket PC 2003 (ARMV4) = Debug|Pocket PC 2003 (ARMV4)
@@ -1365,6 +1373,14 @@ Global
 		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Release|Win32.ActiveCfg = Release|Win32
 		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Release|Win32.Build.0 = Release|Win32
 		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Release|x64.ActiveCfg = Release|Win32
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|Pocket PC 2003 (ARMV4).ActiveCfg = Debug|Win32
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|Win32.ActiveCfg = Debug|Win32
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|Win32.Build.0 = Debug|Win32
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|x64.ActiveCfg = Debug|Win32
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|Pocket PC 2003 (ARMV4).ActiveCfg = Release|Win32
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|Win32.ActiveCfg = Release|Win32
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|Win32.Build.0 = Release|Win32
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|x64.ActiveCfg = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -1460,6 +1476,7 @@ Global
 		{D73BB67D-032B-4FB7-AEB8-5795B246A072} = {53997B2A-D94C-428C-816D-938C297A1866}
 		{FEEF505B-75AE-4E52-8177-51FFC4AB2ED2} = {53997B2A-D94C-428C-816D-938C297A1866}
 		{500DE9BF-6FC1-4ACB-91A9-308BA1D37F37} = {53997B2A-D94C-428C-816D-938C297A1866}
+		{F343CDCB-1DB5-4563-86DF-6AF1596090B2} = {53997B2A-D94C-428C-816D-938C297A1866}
 		{DA651576-4E4F-448C-A0A3-9EDD15C81078} = {D73BB67D-032B-4FB7-AEB8-5795B246A072}
 		{375F95BD-EFBA-4AA3-8DA3-E79779A12896} = {D73BB67D-032B-4FB7-AEB8-5795B246A072}
 	EndGlobalSection
